Done chnages in righr sode bar in deposit method

--- a/drawer.html
+++ b/drawer.html
@@ -23,10 +23,86 @@
 
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active w-100" id="home-tab-pane">
-          <div class="mt-3">
+          <div id="deposit1" class="addSymbol depositBox">
+            <span class="f-secondary fw-500" style="font-size: 14px">Choose your preferred currency</span>
+
+            <div class="symbolBox">
+
+              <div class="symbol_list next-deposit">
+                <div class="drawer_select_item">
+                  <div class="select_symbol">
+                    <img src="./images/tusd.svg" class="symbol" />
+                    <div class="symbol_name">
+                      <p>Tether</p>
+                      <span>Deposit Tether</span>
+                    </div>
+                  </div>
+
+                  <div class="symbol_price">
+                    <svg width="7" height="13" viewBox="0 0 7 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M5.46311 6.5L0.18657 1.11088C0.067111 0.988843 0 0.823325 0 0.650738C0 0.478151 0.067111 0.312634 0.18657 0.190596C0.306029 0.0685587 0.46805 0 0.636991 0C0.805931 0 0.967952 0.0685587 1.08741 0.190596L6.8131 6.03986C6.87234 6.10023 6.91935 6.17195 6.95142 6.25091C6.98349 6.32987 7 6.41451 7 6.5C7 6.58549 6.98349 6.67013 6.95142 6.74909C6.91935 6.82805 6.87234 6.89977 6.8131 6.96014L1.08741 12.8094C0.967952 12.9314 0.805931 13 0.636991 13C0.46805 13 0.306029 12.9314 0.18657 12.8094C0.067111 12.6874 0 12.5218 0 12.3493C0 12.1767 0.067111 12.0112 0.18657 11.8891L5.46311 6.5Z" fill="#8994A3" />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <div class="symbol_list next-deposit">
+                <div class="drawer_select_item">
+                  <div class="select_symbol">
+                    <img src="./images/btc.svg" class="symbol" />
+                    <div class="symbol_name">
+                      <p>Bitcoin</p>
+                      <span>Deposit Bitcoin</span>
+                    </div>
+                  </div>
+
+                  <div class="symbol_price">
+                    <svg width="7" height="13" viewBox="0 0 7 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M5.46311 6.5L0.18657 1.11088C0.067111 0.988843 0 0.823325 0 0.650738C0 0.478151 0.067111 0.312634 0.18657 0.190596C0.306029 0.0685587 0.46805 0 0.636991 0C0.805931 0 0.967952 0.0685587 1.08741 0.190596L6.8131 6.03986C6.87234 6.10023 6.91935 6.17195 6.95142 6.25091C6.98349 6.32987 7 6.41451 7 6.5C7 6.58549 6.98349 6.67013 6.95142 6.74909C6.91935 6.82805 6.87234 6.89977 6.8131 6.96014L1.08741 12.8094C0.967952 12.9314 0.805931 13 0.636991 13C0.46805 13 0.306029 12.9314 0.18657 12.8094C0.067111 12.6874 0 12.5218 0 12.3493C0 12.1767 0.067111 12.0112 0.18657 11.8891L5.46311 6.5Z" fill="#8994A3" />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <div class="symbol_list next-deposit">
+                <div class="drawer_select_item">
+                  <div class="select_symbol">
+                    <img src="./images/eth.svg" class="symbol" />
+                    <div class="symbol_name">
+                      <p>Ethereum</p>
+                      <span>Deposit ETH</span>
+                    </div>
+                  </div>
+
+                  <div class="symbol_price">
+                    <svg width="7" height="13" viewBox="0 0 7 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M5.46311 6.5L0.18657 1.11088C0.067111 0.988843 0 0.823325 0 0.650738C0 0.478151 0.067111 0.312634 0.18657 0.190596C0.306029 0.0685587 0.46805 0 0.636991 0C0.805931 0 0.967952 0.0685587 1.08741 0.190596L6.8131 6.03986C6.87234 6.10023 6.91935 6.17195 6.95142 6.25091C6.98349 6.32987 7 6.41451 7 6.5C7 6.58549 6.98349 6.67013 6.95142 6.74909C6.91935 6.82805 6.87234 6.89977 6.8131 6.96014L1.08741 12.8094C0.967952 12.9314 0.805931 13 0.636991 13C0.46805 13 0.306029 12.9314 0.18657 12.8094C0.067111 12.6874 0 12.5218 0 12.3493C0 12.1767 0.067111 12.0112 0.18657 11.8891L5.46311 6.5Z" fill="#8994A3" />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <div class="symbol_list next-deposit">
+                <div class="drawer_select_item">
+                  <div class="select_symbol">
+                    <img src="./images/bnb.svg" class="symbol" />
+                    <div class="symbol_name">
+                      <p>Ethereum</p>
+                      <span>Deposit ETH</span>
+                    </div>
+                  </div>
+
+                  <div class="symbol_price">
+                    <svg width="7" height="13" viewBox="0 0 7 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M5.46311 6.5L0.18657 1.11088C0.067111 0.988843 0 0.823325 0 0.650738C0 0.478151 0.067111 0.312634 0.18657 0.190596C0.306029 0.0685587 0.46805 0 0.636991 0C0.805931 0 0.967952 0.0685587 1.08741 0.190596L6.8131 6.03986C6.87234 6.10023 6.91935 6.17195 6.95142 6.25091C6.98349 6.32987 7 6.41451 7 6.5C7 6.58549 6.98349 6.67013 6.95142 6.74909C6.91935 6.82805 6.87234 6.89977 6.8131 6.96014L1.08741 12.8094C0.967952 12.9314 0.805931 13 0.636991 13C0.46805 13 0.306029 12.9314 0.18657 12.8094C0.067111 12.6874 0 12.5218 0 12.3493C0 12.1767 0.067111 12.0112 0.18657 11.8891L5.46311 6.5Z" fill="#8994A3" />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="mt-3 depositBox" id="deposit2" style="display: none;">
             <p class="sub_title mb-4">Current balance: 12,112,95 USDT</p>
 
-            <div class="drawer_select_item filled" data-bs-toggle="modal" data-bs-target="#activeBalance">
+            <div class="drawer_select_item filled">
               <div class="select_symbol p-2">
                 <img src="./images/bnb.svg" class="symbol" />
                 <div class="symbol_name">
@@ -98,7 +174,7 @@
 
             <div class="address_code bn">
               <label class="label white" style="margin-top: 1.5rem">Amount</label>
-              <input type="number" placeholder="Capital" class="input_filed w-100" />
+              <input type="number" placeholder="Capital" class="input_filed w-100 bordered" />
               <div class="percantage_box">
                 <div class="percentage">
                   <button class="per_btn">25%</button>
@@ -114,7 +190,7 @@
 
               <div class="d-flex align-items-center">
                 <button class="boost_btn grey w-50 cancel-btnWithdraw">Cancle</button>
-                <button class="boost_btn primary w-50 next-btnWithdraw">Next</button>
+                <button class="boost_btn white w-50 next-btnWithdraw">Next</button>
               </div>
             </div>
           </div>
@@ -125,7 +201,7 @@
             <p class="sub_title" style="margin-top: 1.5rem">Pay to</p>
             <div class="address_code bn">
               <label class="label white" style="margin-top: 1.5rem">Wallet Address</label>
-              <input type="number" placeholder="Capital" class="input_filed w-100" />
+              <input type="number" placeholder="Capital" class="input_filed bordered w-100" />
 
               <div class="tips_box">
                 <p class="sub_title">Please always check your withdrawal waller
@@ -134,18 +210,18 @@
 
               <div class="d-flex align-items-center mt-4">
                 <button class="boost_btn grey w-50 cancel-btnWithdraw">Back</button>
-                <button class="boost_btn primary w-50 next-btnWithdraw">Next</button>
+                <button class="boost_btn white w-50 next-btnWithdraw">Next</button>
               </div>
             </div>
           </div>
 
-          <div class="mt-4 withdrawBoxes" id="withdraw3" style="display: none;">
+          <div class="mt-4 withdrawBoxes py-5" id="withdraw3" style="display: none;">
             <h5 class="conform_small white">Are you sure</h5>
             <h6 class="conform_text">Do you want to procced</h6>
 
             <div class="d-flex align-items-center mt-4">
               <button class="boost_btn grey w-50 cancel-btnWithdraw">Back</button>
-              <button class="boost_btn primary w-50 next-btnWithdraw">Next</button>
+              <button class="boost_btn white w-50 next-btnWithdraw">Next</button>
             </div>
           </div>
 
@@ -185,7 +261,7 @@
                 </li>
               </ul>
               <div class="grid-container mt-4">
-                <button class="boost_btn primary w-100">Return to funds</button>
+                <button class="boost_btn white w-100">Return to funds</button>
               </div>
             </div>
           </div>
@@ -280,16 +356,8 @@
             </button>
           </div>
           <div class="modal_body">
+
             <div id="addSymbol1" class="addSymbol">
-              <h5 class="conform_small ">Are you sure</h5>
-              <h6 class="conform_text">Do you want to procced</h6>
-
-              <div class="d-flex align-content-center justify-content-center mt-4">
-                <button class="boost_btn primary w-100 next-btnAddsymbol">Next</button>
-              </div>
-            </div>
-
-            <div id="addSymbol2" class="addSymbol" style="display: none;">
               <span class="f-secondary fw-500" style="font-size: 14px">Choose your preferred currency</span>
               <label for="symbol1" class="symbol_list">
                 <div class="drawer_select_item">
@@ -339,7 +407,16 @@
 
               <div class="d-flex align-content-center justify-content-center mt-4">
                 <button class="boost_btn oulined_primary w-50" data-bs-dismiss="modal">Cancel</button>
-                <button class="boost_btn primary w-50" id="handleDeposit">Save</button>
+                <button class="boost_btn primary w-50 next-btnAddsymbol">Next</button>
+              </div>
+            </div>
+
+            <div id="addSymbol2" class="addSymbol" style="display: none;">
+              <h5 class="conform_small ">Are you sure</h5>
+              <h6 class="conform_text">Do you want to procced</h6>
+
+              <div class="d-flex align-content-center justify-content-center mt-4">
+                <button class="boost_btn primary w-100">Save</button>
               </div>
             </div>
           </div>
@@ -355,7 +432,7 @@
       // For Withdraw 
       var currentIndex = 1;
       $(".next-btnWithdraw").on("click", function () {
-        if (currentIndex < 5) {
+        if (currentIndex < 4) {
           currentIndex++;
         } else {
           currentIndex = 1;
@@ -365,7 +442,7 @@
       });
 
       $(".cancel-btnWithdraw").on("click", function () {
-        if (currentIndex < 5) {
+        if (currentIndex < 4) {
           currentIndex--;
         } else {
           currentIndex = 1;
@@ -393,6 +470,27 @@
         }
         $(".addSymbol").hide();
         $("#addSymbol" + currentIndex).show();
+      });
+
+
+      $(".next-deposit").on("click", function () {
+        if (currentIndex < 2) {
+          currentIndex++;
+        } else {
+          currentIndex = 1;
+        }
+        $(".depositBox").hide();
+        $("#deposit" + currentIndex).show();
+      });
+
+      $(".cancel-deposit").on("click", function () {
+        if (currentIndex < 2) {
+          currentIndex--;
+        } else {
+          currentIndex = 1;
+        }
+        $(".depositBox").hide();
+        $("#deposit" + currentIndex).show();
       });
     </script>
   </body>
